# diff_checker

./: CMakeLists.txt  Makefile  README.md
include/: file_util.h
src/: file_util.cpp  main.cpp
test/: CMakeLists.txt  test_util.cpp
